--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["babel-preset-expo"],
-  "plugins": [["import", { "libraryName": "antd-mobile" }]]
+  "plugins": ["transform-decorators-legacy",["import", { "libraryName": "antd-mobile" }]]
 }
