--- a/package.json
+++ b/package.json
@@ -1,32 +1,33 @@
 {
-	"name": "nothing",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"@expo/vector-icons": "^5.0.0",
-		"antd-mobile": "1.5.0",
-		"mobx": "^3.2.2",
-		"mobx-persist": "^0.3.3",
-		"mobx-react": "^4.2.2",
-		"rc-form": "^1.4.3",
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.3",
-		"react-native-navigation": "^1.1.165"
-	},
-	"devDependencies": {
-		"babel-jest": "20.0.3",
-		"babel-plugin-import": "^1.2.1",
-		"babel-plugin-transform-decorators-legacy": "^1.3.4",
-		"babel-preset-expo": "^2.0.0",
-		"babel-preset-react-native-stage-0": "^1.0.1",
-		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "nothing",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^5.0.0",
+    "antd-mobile": "1.6.0",
+    "mobx": "^3.2.2",
+    "mobx-persist": "^0.3.3",
+    "mobx-react": "^4.2.2",
+    "native-echarts": "^0.3.0",
+    "rc-form": "^1.4.3",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.3",
+    "react-native-navigation": "^1.1.165"
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-expo": "^2.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0-alpha.6"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
