--- a/ios/nothing/Info.plist
+++ b/ios/nothing/Info.plist
@@ -47,6 +47,8 @@
 	<string></string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
