--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-intl": "^2.3.0",
     "react-native": "0.44.3",
     "react-native-i18n": "^2.0.5",
+    "react-native-image-picker": "^0.26.4",
     "react-native-navigation": "^1.1.165"
   },
   "devDependencies": {
