--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "rn-start": "node node_modules/react-native/local-cli/cli.js start",
     "start": "node scripts/custom-rn-theme.js && npm run rn-start",
-    "run-ios": "node scripts/custom-rn-theme.js && react-native run-ios",
-    "run-android": "node scripts/custom-rn-theme.js && react-native run-android",
+    "ios": "node scripts/custom-rn-theme.js && react-native run-ios",
+    "android": "node scripts/custom-rn-theme.js && react-native run-android",
     "test": "jest"
   },
   "dependencies": {
