feat 完善安卓打包

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+NOTHING_RELEASE_STORE_FILE=zhoujd-release-key.keystore
+NOTHING_RELEASE_KEY_ALIAS=my-key-alias
+NOTHING_RELEASE_STORE_PASSWORD=123456
+NOTHING_RELEASE_KEY_PASSWORD=123456
