--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,7 +93,15 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+                abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            storeFile file(NOTHING_RELEASE_STORE_FILE)
+            storePassword NOTHING_RELEASE_STORE_PASSWORD
+            keyAlias NOTHING_RELEASE_KEY_ALIAS
+            keyPassword NOTHING_RELEASE_KEY_PASSWORD
         }
     }
     splits {
@@ -108,6 +116,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -126,7 +135,6 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-svg')
     compile project(':react-native-image-picker')
     compile project(':react-native-i18n')
     compile fileTree(dir: "libs", include: ["*.jar"])
