[feat] 提交热更新及样式处理

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,6 +135,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-update')
     compile project(':react-native-image-picker')
     compile project(':react-native-i18n')
     compile fileTree(dir: "libs", include: ["*.jar"])
