--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.0.0-alpha.6",
     "react-intl": "^2.3.0",
     "react-native": "0.44.3",
+    "react-native-htmlview": "^0.12.0",
     "react-native-i18n": "^2.0.5",
     "react-native-image-picker": "^0.26.4",
     "react-native-navigation": "latest",
