个人信息保存完成

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "mobx": "^3.2.2",
     "mobx-persist": "^0.3.3",
     "mobx-react": "^4.2.2",
+    "moment": "^2.18.1",
     "native-echarts": "^0.3.0",
+    "obj-merged": "^1.0.5",
     "rc-form": "^1.4.3",
     "react": "16.0.0-alpha.6",
     "react-intl": "^2.3.0",
