--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+<meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}"/>
+<meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}"/>
+
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
