--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "configureJPush": "node node_modules/jpush-react-native/JPushConfiguration.js",
     "rn-start": "node node_modules/react-native/local-cli/cli.js start",
     "start": "node scripts/custom-rn-theme.js && npm run rn-start",
     "ios": "node scripts/custom-rn-theme.js && react-native run-ios",
@@ -13,6 +14,8 @@
   },
   "dependencies": {
     "antd-mobile": "1.6.6",
+    "jcore-react-native": "^1.1.8-beta2",
+    "jpush-react-native": "^2.0.9",
     "mobx": "^3.2.2",
     "mobx-persist": "^0.3.3",
     "mobx-react": "^4.2.2",
