--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,31 +83,29 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.1"
+    compileSdkVersion 23
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
-        applicationId "com.nothing"
+        applicationId "com.echr"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
-                abiFilters "armeabi-v7a", "x86"
+            abiFilters "armeabi-v7a", "x86"
         }
-        manifestPlaceholders = [
-                JPUSH_APPKEY: "13a6d9666834843a98990c0a", //在此替换你的APPKey
-                APP_CHANNEL: "developer-default"    //应用渠道号
-        ]
     }
+
     signingConfigs {
         release {
-            storeFile file(NOTHING_RELEASE_STORE_FILE)
-            storePassword NOTHING_RELEASE_STORE_PASSWORD
-            keyAlias NOTHING_RELEASE_KEY_ALIAS
-            keyPassword NOTHING_RELEASE_KEY_PASSWORD
+            storeFile file(ECHR_RELEASE_STORE_FILE)
+            storePassword ECHR_RELEASE_STORE_PASSWORD
+            keyAlias ECHR_RELEASE_KEY_ALIAS
+            keyPassword ECHR_RELEASE_KEY_PASSWORD
         }
     }
+
     splits {
         abi {
             reset()
@@ -139,15 +137,11 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-update')
-    compile project(':react-native-image-picker')
     compile project(':react-native-i18n')
+    compile project(':react-native-image-picker')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile project(':jpush-react-native')
-    compile project(':jcore-react-native')
-    compile "com.android.support:appcompat-v7:25.0.1"
-    compile "com.facebook.react:react-native:+"
-    compile project(':react-native-navigation')
+    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
