--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,12 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nothing"
+    package="com.echr"
     android:versionCode="1"
     android:versionName="1.0">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -28,10 +26,6 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
-
-<meta-data android:name="JPUSH_CHANNEL" android:value="${APP_CHANNEL}"/>
-<meta-data android:name="JPUSH_APPKEY" android:value="${JPUSH_APPKEY}"/>
-
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     </application>
 
