--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "antd-mobile": "1.6.6",
-    "jcore-react-native": "^1.1.8-beta2",
-    "jpush-react-native": "^2.0.9",
-    "mobx": "^3.2.2",
+    "antd-mobile": "1.7.0",
+    "jcore-react-native": "^1.1.8",
+    "jpush-react-native": "^2.1.0",
+    "mobx": "^3.3.1",
     "mobx-persist": "^0.3.3",
-    "mobx-react": "^4.2.2",
-    "moment": "^2.18.1",
+    "mobx-react": "^4.3.3",
+    "moment": "^2.19.1",
     "native-echarts": "^0.3.0",
     "obj-merged": "^1.0.5",
-    "rc-form": "^1.4.3",
+    "rc-form": "^1.4.8",
     "react": "16.0.0-alpha.6",
-    "react-intl": "^2.3.0",
+    "react-intl": "^2.4.0",
     "react-native": "0.44.3",
     "react-native-htmlview": "^0.12.0",
-    "react-native-i18n": "^2.0.5",
-    "react-native-image-picker": "^0.26.4",
-    "react-native-navigation": "latest",
-    "react-native-update": "^4.0.5"
+    "react-native-i18n": "^2.0.7",
+    "react-native-image-picker": "^0.26.7",
+    "react-native-navigation": "^1.1.236",
+    "react-navigation": "^1.0.0-beta.13"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
-    "babel-plugin-import": "^1.2.1",
+    "babel-plugin-import": "^1.6.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-expo": "^2.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
