--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "antd-mobile": "1.7.0",
-    "jcore-react-native": "^1.1.8",
+    "jcore-react-native": "^1.1.8-beta2",
     "jpush-react-native": "^2.1.0",
     "mobx": "^3.3.1",
     "mobx-persist": "^0.3.3",
@@ -29,6 +29,7 @@
     "react-native-htmlview": "^0.12.0",
     "react-native-i18n": "^2.0.7",
     "react-native-image-picker": "^0.26.7",
+    "react-native-update": "^4.0.6",
     "react-navigation": "^1.0.0-beta.13"
   },
   "devDependencies": {
