--- a/ios/nothing.xcodeproj/xcshareddata/xcschemes/nothing.xcscheme
+++ b/ios/nothing.xcodeproj/xcshareddata/xcschemes/nothing.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ecHRssc.app"
+               BuildableName = "nothing.app"
                BlueprintName = "nothing"
                ReferencedContainer = "container:nothing.xcodeproj">
             </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ecHRssc.app"
+            BuildableName = "nothing.app"
             BlueprintName = "nothing"
             ReferencedContainer = "container:nothing.xcodeproj">
          </BuildableReference>
@@ -96,7 +96,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ecHRssc.app"
+            BuildableName = "nothing.app"
             BlueprintName = "nothing"
             ReferencedContainer = "container:nothing.xcodeproj">
          </BuildableReference>
@@ -115,7 +115,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ecHRssc.app"
+            BuildableName = "nothing.app"
             BlueprintName = "nothing"
             ReferencedContainer = "container:nothing.xcodeproj">
          </BuildableReference>
