--- a/package.json
+++ b/package.json
@@ -6,35 +6,35 @@
     "configureJPush": "node node_modules/jpush-react-native/JPushConfiguration.js",
     "rn-start": "node node_modules/react-native/local-cli/cli.js start",
     "start": "node scripts/custom-rn-theme.js && npm run rn-start",
-    "ios": "node scripts/custom-rn-theme.js && react-native run-ios",
-    "android": "node scripts/custom-rn-theme.js && react-native run-android",
+    "ios": "react-native run-ios",
+    "android": "react-native run-android",
     "apk": "cd android && ./gradlew assembleRelease",
     "adb": "adb install android/app/build/outputs/apk/app-release.apk",
     "test": "jest"
   },
   "dependencies": {
-    "antd-mobile": "1.7.0",
-    "jcore-react-native": "^1.1.8-beta2",
-    "jpush-react-native": "^2.1.0",
+    "antd-mobile": "^2.0.1",
+    "jcore-react-native": "^1.2.2",
+    "jpush-react-native": "^2.1.3",
     "mobx": "^3.3.1",
     "mobx-persist": "^0.3.3",
     "mobx-react": "^4.3.3",
     "moment": "^2.19.1",
     "native-echarts": "^0.3.0",
     "obj-merged": "^1.0.5",
-    "rc-form": "^1.4.8",
+    "rc-form": "^1.5.0",
     "react": "16.0.0-alpha.6",
     "react-intl": "^2.4.0",
     "react-native": "0.44.3",
-    "react-native-htmlview": "^0.12.0",
-    "react-native-i18n": "^2.0.7",
+    "react-native-htmlview": "^0.12.1",
+    "react-native-i18n": "^2.0.9",
     "react-native-image-picker": "^0.26.7",
     "react-native-update": "^4.0.6",
-    "react-navigation": "^1.0.0-beta.13"
+    "react-navigation": "^1.0.0-beta.15"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
-    "babel-plugin-import": "^1.6.1",
+    "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-expo": "^2.0.0",
     "babel-preset-react-native-stage-0": "^1.0.1",
