--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,7 +19,7 @@
 
 android.useDeprecatedNdk=true
 
-ECHR_RELEASE_STORE_FILE=zhoujd-release-key.keystore
+ECHR_RELEASE_STORE_FILE=../keystores/zhoujd-release-key.keystore.jks
 ECHR_RELEASE_KEY_ALIAS=android
 ECHR_RELEASE_STORE_PASSWORD=123456
 ECHR_RELEASE_KEY_PASSWORD=123456
